fix overflow for categorical columns

--- a/src/styles/_body_html.scss
+++ b/src/styles/_body_html.scss
@@ -10,7 +10,7 @@
     margin: 0;
   }
 
-  div.text {
+  div.text, div.cat {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
